<resources>
    <string name="app_name">Hava Tahmini</string>
    <string name="locationText">Konum</string>
    <string name="weatherStatusText">Yükleniyor...</string>
    <string name="degreeText">°C</string>
    <string name="feelsLikeText">Hissedilen Sıcaklık</string>
    <string name="feelsLikeValue">-</string>
    <string name="humidityText">Nem</string>
    <string name="humidityValue">-</string>
    <string name="contact_us">Bize Ulaşın</string>
    <string name="dateText">Tarih</string>
    <string name="permissionError">Konum İzni Gerekiyor</string>
    <string name="locationImageContentDesc">Konum Görseli</string>
    <string name="weatherAnimContentDesc">Hava Durumu Animasyonu</string>
    <string name="locationPermissionText">Konum İzni Vermeniz Gerekmektedir.</string>
    <string name="snackbarButton">İZİN VER</string>
    <string name="minDegreeText">En Düşük </string>
    <string name="maxDegreeText">En Yüksek </string>
    <string name="seperatorText"> / </string>
</resources>