<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="24dp">

        <ImageView
            android:id="@+id/locationImage"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/place"
            android:contentDescription="@string/locationImageContentDesc"/>

        <TextView
            android:id="@+id/locationText"
            style="@style/h2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:text="@string/locationText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bodyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/animationImage"
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:maxHeight="240dp"
            app:srcCompat="@drawable/loading_anim"
            android:contentDescription="@string/weatherAnimContentDesc"/>

        <TextView
            android:id="@+id/weatherStatusText"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weatherStatusText"/>

        <TextView
            android:id="@+id/degreeText"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/degreeText"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="48dp"
                android:layout_marginRight="48dp"
                android:layout_marginBottom="96dp"
                android:background="@drawable/card_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </View>

            <TextView
                android:id="@+id/feelsLikeText"
                style="@style/body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:text="@string/feelsLikeText"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <TextView
                android:id="@+id/feelsLikeValue"
                style="@style/body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:text="@string/feelsLikeValue"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/feelsLikeText" />

            <TextView
                android:id="@+id/dateText"
                style="@style/body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:text="@string/dateText"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintStart_toStartOf="@+id/view" />

            <TextView
                android:id="@+id/humidityText"
                style="@style/body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:text="@string/humidityText"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <TextView
                android:id="@+id/humidityValue"
                style="@style/body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:text="@string/humidityValue"
                app:layout_constraintStart_toStartOf="@+id/humidityText"
                app:layout_constraintTop_toBottomOf="@+id/humidityText" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabContactUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/contact_us"
            android:onClick="contactUs"
            android:src="@drawable/email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </LinearLayout>


</LinearLayout>